--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 :root {
   --light-dark: rgba(20, 20, 21, 0.954);
-
+  --light-blue: #72a0c1;
+  --eggshell: #dcdcdc;
 }
 
+
+.main-bg {
+  background-color: black;
+}
 
 .main-txt {
   color: #003153;
 }
 
+
+
 .heading-txt {
-  color: #3c1414;
+  /* color: #3c1414; */
   font-weight: bolder;
+  font-family: 'Darker Grotesque', sans-serif;
 }
