--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@
   color: #003153;
 }
 
-
-
 .heading-txt {
   /* color: #3c1414; */
   font-weight: bolder;
   font-family: 'Darker Grotesque', sans-serif;
   font-size: 2.5rem;
+}
+
+.mdi-btn {
+  font-size: 4.5rem;
 }
